Fix theme on mobile, disable grid for small devices

--- a/source/css/breakpoints/_1030up.scss
+++ b/source/css/breakpoints/_1030up.scss
@@ -9,6 +9,3 @@ be seen on the Desktop.
 
 ******************************************************************/
 
-.wrap {
-  max-width: 1140px;
-}
